# catena-lang

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  flake.nix  stdlib.hex
catena/: Cargo.toml
catena-cli/: Cargo.toml
catena-cli/src/: compile_check_report.rs  compile_graph_render.rs  hexpr_render.rs  main.rs
catena-dsl/: Cargo.toml  check.sh  example-prog.hex  example.hex
catena-dsl/doc/: BUFFERS.md  CLOSURE_CONVERSION.md  CODEGEN.md  CONDITIONALS.md  MAIN.md  OVERVIEW.md  VALUES.md
catena-dsl/examples/: runtime.rs
catena-dsl/smoketest/: Makefile
catena-dsl/smoketest/src/: array_head.cpp
catena-dsl/src/: check.rs  compile.rs  lib.rs  main.rs  report.rs
catena-dsl/src/codegen/: c.rs  fn_ptrs.rs  gpu.rs  lower_types.rs  mod.rs  prelude.rs  types.rs
catena-dsl/src/elaborate/: mod.rs  name_symbols.rs
catena-dsl/src/pass/: forget_closures.rs  mod.rs
catena-dsl/src/report/: c.rs  gpu.rs  mod.rs  svg.rs
catena-dsl/src/runtime/: artifact.rs  executor.rs  mem.rs  mod.rs  runtime.rs  signature.rs  value.rs
catena-dsl/stdlib/: buf.hex  cmc.hex  data.hex  fn.hex  index.hex  product.hex  value.hex
catena-dsl/stdlib/base/: data.hex  product.hex
catena/examples/: runtime.rs
catena/src/: bend.rs  check.rs  erase.rs  lang.rs  lib.rs  lower.rs  render_hexpr.rs  scope.rs  structured.rs  unbound.rs  union_find.rs
catena/src/backend/c/: codegen.rs  compile.rs  executor.rs  mod.rs  runtime.rs  sandbox_ffi.rs  (+1 more)
catena/src/codegen/: c.rs
catena/src/compile/: analysis.rs  check.rs  check_render.rs  config.rs  cuda.rs  graph.rs  graph_ops.rs  graph_render.rs  interleave_arrows.rs  lift.rs  load.rs  mod.rs  normalize.rs  pipeline.rs  program.rs  structured.rs
catena/src/elaborate/: mod.rs
catena/src/hypergraph/: subgraph.rs
catena/src/pass/: discard_naturality.rs  erase.rs  expand_eta.rs  forget_bound.rs  forget_loopback.rs  inline.rs  mod.rs
catena/src/stdlib/: operations.rs
catena/src/structured/: cfg.rs  cuda.rs  ir.rs  ramsey.rs  tiled_matmul.rs
(+226 files in other folders)
