[package]
name = "catena"
version = "0.1.0"
edition = "2024"

[dependencies]
hexpr = "0.2.0"
graphviz-rust = "0.9.7"
metacat = { workspace = true }
open-hypergraphs = { workspace = true }
thiserror = "2.0.18"
tempfile = "3.23.0"
libffi = "5.1.0"
libloading = "0.9.0"

[dev-dependencies]
anyhow = "1.0.102"
